# anima

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
anima/: __init__.py  kernel.py  state.py  types.py
anima/bridge/: __init__.py  adapter.py  anthropic.py  context.py  ollama.py  openai.py
anima/consciousness/: __init__.py  integration.py  schema.py  unified.py  workspace.py
anima/memory/: __init__.py  activation.py  consolidation.py  decay.py  engram_store.py
anima/metrics/: __init__.py  benchmark.py  consciousness.py  phi.py  temporal.py
anima/primitives/: __init__.py  base.py  engram.py  flux.py  impulse.py  mirror.py  nexus.py  qualia.py  trace.py  valence.py
anima/shell/: __init__.py  cli.py  dashboard.py  inspector.py
anima/temporal/: __init__.py  autobio_buffer.py  consolidation.py  state_machine.py  time_engine.py
benchmarks/: results.json
examples/: consciousness_metrics.py  emotional_memory.py  quickstart.py
launch/: hackernews.md  reddit.md  twitter.md
paper/: anima_paper.md
scripts/: demo.py  run_benchmarks.py
tests/: test_bridge.py  test_consciousness.py  test_kernel.py  test_memory.py  test_metrics.py  test_primitives.py  test_shell.py  test_state.py  test_temporal.py  test_types.py
