[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anima-kernel"
version = "0.1.0"
description = "The first empirically-tested consciousness substrate for AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Christian Bucher", email = "christian@nextool.app"},
]
keywords = ["consciousness", "ai", "kernel", "iit", "gwt", "temporal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/christian140903-sudo/anima"
Repository = "https://github.com/christian140903-sudo/anima"
Documentation = "https://github.com/christian140903-sudo/anima#readme"
Issues = "https://github.com/christian140903-sudo/anima/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
anima = "anima.shell.cli:main"

[tool.setuptools.packages.find]
include = ["anima*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
